# Otus_Python

./: README.md  requirements.txt
HomeWork01/: catalog.txt  log.txt  main.py  readme.md
HomeWork02/: controller.py  main.py  model.py  readme.md  view.py
HomeWork03/: catalog.py  catalog.txt  contact.py
HomeWork04/: app.py  readme.md
HomeWork05/: Dockerfile  app.py  readme.md  requirements.txt
HomeWork06/: README.md  __init__.py  jsonplaceholder_requests.py  main.py  models.py
HomeWork07/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
HomeWork07/app/: alembic.ini  app.py  config.py  main.py  prestart.sh
HomeWork07/app/alembic/: env.py
HomeWork07/app/alembic/versions/: 2025_07_02_1827-d15896b03165_create_tables.py
HomeWork07/app/async_requests/: __init__.py  async_base.py  jsonplaceholder_service.py
HomeWork07/app/models/: __init__.py  base.py  engine.py  user.py
HomeWork07/app/models/mixins/: __init__.py  int_pk_mixin.py
HomeWork07/app/schemas/: __init__.py  user.py
HomeWork07/app/static/css/: styles.css
HomeWork07/app/views/: __init__.py
HomeWork07/app/views/api_v1/: __init__.py
HomeWork07/app/views/api_v1/users/: __init__.py  crud.py  dependencies.py  views.py
HomeWork08/: README.md
HomeWork09/: README.md
HomeWork10/: README.md
HomeWork11/: README.md
HomeWork12/: README.md  pytest.ini
HomeWork13/: .gitlab-ci.yml  README.md
HomeWork14/: readme.md
Homework03/: catalog.py  controller.py  log.txt  main.py  model.py  readme.md  view.py
Lesson01/: Code_01.py
Lesson02/: Code_02.py
Project/: readme.md
(+110 files in other folders)
