[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
psycopg = "^3.2.3"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
asyncio = "^3.4.3"
requests = "^2.32.3"
aiohttp = "^3.11.8"
asyncpg = "^0.30.0"
gunicorn = "^23.0.0"
locust = "^2.32.3"
black = "^24.10.0"
pre-commit = "^4.0.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
